# cc-tg

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  auto-update.sh  bot.py  bridge.py  cc.py  codex_engine.py  constants.py  engine.py  media.py  memory_health.py  pyproject.toml  sidebar_bot.py  sidebar_bridge.py  sidebar_events.py  sidebar_history.py  sidebar_mcp.py  sidebar_tool_registry.py  sidebar_translate.py  skill_evolve_nudge.py  tg_mcp.py  tg_transcript.py  weixin_bot.py  weixin_bridge.py  weixin_ilink.py  weixin_mcp.py
scripts/: auto-update.sh  poll-healthcheck.sh  self-ops.sh
tests/: conftest.py  test_channel_worker.py  test_codex_engine.py  test_tg_comm_safety.py  test_tg_transcript.py  test_wx_split_safety.py
